--- a/css/styles.css
+++ b/css/styles.css
@@ -5,13 +5,27 @@ color: #434455;
 background-color: #FFFFFF;
 }
 
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
+
 a {text-decoration: none;}
 
-ul, ol {list-style-type: none;}
+ul, ol {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
 
 address {font-style: normal;}
 
-button {cursor: pointer;} 
+button {cursor: pointer;}
+
+.container {
+max-width: 1158px;
+padding: 0 15px;
+margin: 0 auto;
+}
 
 .logo {
     font-family: "Raleway", sans-serif;
@@ -23,8 +37,27 @@ button {cursor: pointer;}
     color: #4d5ae5;
 }
 
+.page-header {
+    border-bottom: 1px solid #e7e9fc;
+}
+
+.header-logo {
+    padding: 24px 0;
+    margin-right: 76px;
+}
+
 .header-logo-part {
     color: #2e2f42;
+}
+
+.header-container {
+ display: flex;
+ align-items: center;
+}
+
+.header-nav {
+    display: flex;
+    align-items: center;
 }
 
 .nav-list{
@@ -33,9 +66,15 @@ button {cursor: pointer;}
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    p
 }
 .nav-link {
+    display: block;
     color: #2e2f42;
+    padding: 24px 0;
 }
 .nav-link:hover {
     color: #404BBF;
@@ -45,19 +84,29 @@ button {cursor: pointer;}
 }
 
 .contacts {
+    margin-left: auto;
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
 }
+
+.contacts-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
 .contacts-link {
-    color: #434455
+    display: block;
+    color: #434455;
+    padding: 24px 0;
 }
 .contacts-link:hover {
-    color: #404BBF
+    color: #404BBF;
 }
 .contacts-link:focus {
-    color: #404bbf
+    color: #404bbf;
 }
 
 /* Hero 1 */
