--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,9 @@ ul, ol {
     margin: 0;
     padding: 0;
 }
+img {
+    display: block;
+}
 
 address {font-style: normal;}
 
@@ -113,6 +116,7 @@ margin: 0 auto;
 
 .hero {
     background-color: #2e2f42;
+    padding: 188px 0 188px;
 }
 .hero-title {
     font-weight: 700;
@@ -121,6 +125,8 @@ margin: 0 auto;
     letter-spacing: 0.02em;
     text-align: center;
     color: #FFFFFF;
+    max-width: 496px;
+    margin: 0 auto 48px;
 }
 
 .hero-btn {
@@ -130,6 +136,12 @@ margin: 0 auto;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #ffffff;
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
+    margin: auto;
 }
 .hero-btn:hover {
     background-color: #404BBF;
