--- a/css/styles.css
+++ b/css/styles.css
@@ -197,6 +197,7 @@ margin: 0 auto;
 
 .our-team {
 background-color: #F4F4FD;
+padding: 120px 0;
 }
 
 .our-team-title {
@@ -206,10 +207,19 @@ text-align: center;
 letter-spacing: 0.02em;
 text-transform: capitalize;
 color: #2e2f42;
+margin-bottom: 72px;
+}
+
+.our-team-list-ul {
+    display: flex;
+    gap: 24px;
+
 }
 
 .our-team-list{
 background-color: #FFFFFF;
+flex-basis: calc((100% - 72px) / 4);
+border-radius: 0px 0px 4px 4px;
 }
 
 .our-team-list-title {
@@ -218,6 +228,8 @@ font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
 color: #2e2f42;
+text-align: center;
+margin-bottom: 8px;
 }
 
 .our-team-list-item {
@@ -225,6 +237,11 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
+text-align: center;
+}
+
+.our-team-name-position {
+    padding: 32px 0;
 }
 
 /* Our Portfolio 4 */
