--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,10 @@ text-align: center;
 
 /* Our Portfolio 4 */
 
+.our-portfolio {
+    padding: 120px 0 120px 0;
+}
+
 .our-portfolio-title {
 font-size: 36px;
 line-height: 1.11;
@@ -253,6 +257,18 @@ text-align: center;
 letter-spacing: 0.02em;
 text-transform: capitalize;
 color: #2e2f42;
+margin-bottom: 72px;
+}
+
+.our-portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+
+.our-portfolio-list-li {
+    width: calc((100% - 48px) / 3);
 }
 
 .our-portfolio-list-title {
@@ -270,10 +286,18 @@ letter-spacing: 0.02em;
 color: #434455;
 }
 
+.our-portfolio-name-cat-app {
+padding: 32px 16px;
+border: 1px solid #e7e9fc;
+border-top: none;
+margin-bottom: 8px;
+}
+
 /* Footer */
 
 .footer {
 background-color: #2e2f42;
+padding: 100px 0;
 }
 .footer-logo-part {
     color: #f4f4fd;
@@ -283,4 +307,10 @@ background-color: #2e2f42;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #F4F4FD;
+max-width: 264px;
+}
+
+.logo-footer {
+display: inline-block;
+margin-bottom: 16px;
 }
