section our porfolio fix2

--- a/css/styles.css
+++ b/css/styles.css
@@ -257,6 +257,7 @@ text-align: center;
 letter-spacing: 0.02em;
 text-transform: capitalize;
 color: #2e2f42;
+margin-bottom: 72px;
 }
 
 .our-portfolio-list {
